<resources>

    <string name="app_name">Soccer ScoreKeeper</string>

    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>

    <string name="zero">0</string>
    <string name="plus">+1</string>

    <string name="scores">Goals</string>
    <string name="fouls">Fouls</string>
    <string name="corners">Corners</string>

    <string name="reset">Reset</string>

</resources>